--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "lerna": "^7.2.0"
+    "lerna": "^7.2.0",
+    "nodemon": "^2.0.22"
   }
 }
