--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon todoList.js"
+    "start": "forever start -c node todoList.js"
   },
   "author": "",
   "license": "ISC",
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "lerna": "^7.2.0",
-    "minisearch": "6.0.1"
+    "minisearch": "6.0.1",
+    "forever": "^4.0.3"
   }
 }
