--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "start": "forever start -c vite .",
+    "stop": "forever stopall",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
