--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "forever start -c node todoList.js"
+    "start": "forever start -c node todoList.js",
+    "build": "echo \"No build script specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
