--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   ],
   "scripts": {
     "start": "lerna run start",
+    "build": "lerna run build",
     "stop": "forever stopall"
   },
   "devDependencies": {
