--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "forever start -c node todoList.js",
-    "build": "echo \"No build script specified"
+    "build": "echo \"No build script specified\""
   },
   "author": "",
   "license": "ISC",
