--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "forever start -c node todoList.js",
+    "start": "forever start --minUptime 1000 --spinSleepTime 1000 -c node todoList.js",
     "build": "echo \"No build script specified\""
   },
   "author": "",
