--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -4,11 +4,12 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "start": "forever start --minUptime 1000 --spinSleepTime 1000 -c vite .",
-    "stop": "forever stopall",
+    "start": "vite",
+    "stop": "pm2 stop all",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start:pm2": "pm2 start npm --name 'vite-project' -- run start"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
@@ -38,6 +39,6 @@
     "eslint-plugin-react-refresh": "^0.4.3",
     "lerna": "^7.2.0",
     "vite": "^4.4.5",
-    "forever": "^4.0.3"
+    "pm2": "^5.1.0"
   }
 }
